Fix toolbar background on the login page in dark mode.

--- a/deb/openmediavault/workbench/src/app/core/pages/login-page/login-page.component.scss
+++ b/deb/openmediavault/workbench/src/app/core/pages/login-page/login-page.component.scss
@@ -51,6 +51,7 @@
     position: absolute;
 
     mat-toolbar {
+      background-color: dc.$omv-color-transparent;
       display: flex;
       justify-content: flex-end;
     }
