--- a/deb/openmediavault/workbench/src/styles.scss
+++ b/deb/openmediavault/workbench/src/styles.scss
@@ -278,10 +278,6 @@ $omv-dark-theme: mat.define-dark-theme(
   }
 }
 
-.omv-background-color-pair-transparent {
-  background-color: dc.$omv-color-transparent;
-}
-
 .omv-background-color-pair-tip {
 }
 
